fix: updates contact info

--- a/Eng_Resume.tex
+++ b/Eng_Resume.tex
@@ -7,8 +7,8 @@
 
 \name{NATHAN T. HUI}
 % \address used twice to have two lines of address
-\address{8434 Via Sonoma, \#63, La Jolla, CA 92037}
-\address{nthui@eng.ucsd.edu, (408) 780-8594}
+\address{13336 Tobiasson Rd, Poway, CA 92064}
+\address{nthui@ucsd.edu, (408) 838-5393}
 
 
 \begin{resume}
