feat: Updates CV and publications

--- a/CV.tex
+++ b/CV.tex
@@ -2,9 +2,7 @@
 \documentclass[line,margin]{res}
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font
-
 \begin{document}
-
 \name{NATHAN T. HUI}
 % \address used twice to have two lines of address
 \address{13336 Tobiasson Rd, Poway, CA 92064}
@@ -35,21 +33,56 @@
 		\item 
 	\end{itemize}
 
-	{\sl UCSD E4E / CISA3 - Project Lead} \hfill January 2 2014 - current
+	{\sl UCSD Dronelab / Center for Interdisciplinary Sciences, Art, Archaeology, and Architecture (CISA3) / Cultural Heritage Engineering Initiative (CHEI)} \hfill January 2015 - current
 	\begin{itemize}
-		\item Leading the development, testing, and deployment of C/C++ and Python embedded software and computing hardware for aerial ecological radio transmitter tracking surveys, using software-defined radios to detect transmissions and embedded Linux single-board computers for online processing.
-		\item Leading the development, testing of 3D printed mechanical subsystems in SolidWorks for mounting scientific payloads to multirotor aircraft.
-		\item Developed and deployed embedded C software onto an ATMega microprocessor for controlling a sensor payload and aggregating data from low-level sensors over serial communications.
-		\item Designed and built a single-board computer supporting an ATMega microprocessor for integrating sensor data and user interface hardware.
-		\item Explored technology to dynamically generate and optimize drone flight paths for aerial survey using real-time feedback from cameras and other drone sensors, including terrain following/mapping and source seeking techniques.
+		\item Developed and tested a multicamera photogrammetry rig for shallow water demonstration of underwater photogrammetry in 2022-2024.
+		\item 
+		\item Flew multirotor aircraft to support remote monitoring of shake table testing at the NHERI Large High Performance Outdoor Shake Table at UC San Diego from 2016 to 2024.
 		\item Developed integrated 3-D visual mapping tools using stereo cameras to enable researchers to make high-quality 3-D models of areas in near real-time under an Undergraduate Research Fellowship from the Center of Integrated Access Networks (CIAN) in 2015.
-		\item Developed a stabilization controller in C on an embedded microcontroller for an actively stabilized DSLR mount for a persistent aerial survey platform, aimed at providing researchers with a wide-angle view coupled with pan-capable zoom imagery.
+		\item Falko Kuester, fkuester@ucsd.edu
+		\item Dominique Rissolo, drissolo@ucsd.edu
+	\end{itemize}
+
+	{\sl UCSD Engineers for Exploration (E4E) - Project Lead} \hfill January 2 2014 - current
+	\begin{itemize}
 		\item Mentoring and managing students working on various research projects.
-		\item Conducted daytime and nighttime test flights and scientific survey flights of a multirotor-based wildlife tracking system using radio transmitters.
-		\item Integrated radio tracking sensor payloads into multiple multirotor systems using design and requirements analysis to enable robust long-endurance survey flights in austere environments.
-		\item Analyzed post-crash telemetry in deployed and testing enviornments to determine and mitigate causes of crashes to facilitate system robustness.
-		\item Conducted scientific survey flights of multirotor-based aerial photography systems to capture imagery of Maya ruins in Guatemala to facilitate developing 3D models of ancient Maya cities.
-		\item Provided autopilot monitoring and ground support for fixed-wing drone-based mapping flights to capture imagery of Guatemalan forests to facilitate developing topographic maps to help guide archaeologists.
+		\item FishSense
+		\begin{itemize}
+			\item Conducted test dives to evaluate the performance and operation of an underwater camera fitted with a laser for fish length detection.
+			\item Supervised the development, testing, and production of citizen science systems to survey fish lengths using underwater cameras and machine learning.
+			\item Supported at-sea recording and measurement of fish with the California Cooperative Fisheries Research Program using non-invasive photogrammetric techniques.
+		\end{itemize}
+		\item Smartfin
+		\begin{itemize}
+			\item Implemented C++ firmware on Particle IoT platforms for embedded citizen science smart surfboard sensor fins.
+			\item Supervised and revised development of carrier PCB for embedded Particle IoT platforms.
+			\item Supervised development of production procedures of Smartfins.
+			\item Supervised and executed field-testing of prototype Smartfins.
+		\end{itemize}
+		\item Mangrove Monitoring
+		\begin{itemize}
+			\item Led international expedition to Jamaica to survey mangrove extent using drones and on-ground survey techniques
+		\end{itemize}
+		\item Guatemala
+		\begin{itemize}
+			\item Conducted scientific survey flights of multirotor-based aerial photography systems to capture imagery of Maya ruins in Guatemala to facilitate developing 3D models of ancient Maya cities in 2015.
+			\item Provided autopilot monitoring and ground support for fixed-wing drone-based mapping flights to capture imagery of Guatemalan forests to facilitate developing topographic maps to help guide archaeologists in 2015.
+		\end{itemize}
+		\item Radio Telemetry Tracking
+		\begin{itemize}
+			\item Leading the development, testing, and deployment of C/C++ and Python embedded software and computing hardware for aerial ecological radio transmitter tracking surveys, using software-defined radios to detect transmissions and embedded Linux single-board computers for online processing.
+			\item Leading the development, testing of 3D printed mechanical subsystems in SolidWorks for mounting scientific payloads to multirotor aircraft.
+			\item Developed and deployed embedded C software onto an ATMega microprocessor for controlling a sensor payload and aggregating data from low-level sensors over serial communications.
+			\item Designed and built a single-board computer supporting an ATMega microprocessor for integrating sensor data and user interface hardware.
+			\item Conducted daytime and nighttime test flights and scientific survey flights of a multirotor-based wildlife tracking system using radio transmitters.
+			\item Integrated radio tracking sensor payloads into multiple multirotor systems using design and requirements analysis to enable robust long-endurance survey flights in austere environments.
+			\item Analyzed post-crash telemetry in deployed and testing enviornments to determine and mitigate causes of crashes to facilitate system robustness.
+			\item Explored technology to dynamically generate and optimize drone flight paths for aerial survey using real-time feedback from cameras and other drone sensors, including terrain following/mapping and source seeking techniques.
+		\end{itemize}
+		\item Stabilized Aerial Camera Platform
+		\begin{itemize}
+			\item Developed a stabilization controller in C on an embedded microcontroller for an actively stabilized DSLR mount for a persistent aerial survey platform, aimed at providing researchers with a wide-angle view coupled with pan-capable zoom imagery.
+		\end{itemize}
 		\item Instructed student pilots in practical and theoretical aspects of flying SUAS in preparation for operating drones on scientific deployments.
 		\item Operated the autopilot and ground station for multirotor-based thermal imaging to detect birds in nests for ecological surveys.
 		\item Primary Investigator: Ryan Kastner, (858) 534-3534, kastner@ucsd.edu; Curt Schurgers, (858) 246-1442, cschurgers@ucsd.edu
