--- a/publications.bib
+++ b/publications.bib
@@ -35,6 +35,23 @@
 	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/rob.22017},
 	abstract = {Abstract Radio telemetry is a commonly used technique in conservation biology and ecology, particularly for studying the movement and range of individuals and populations. Traditionally, most radio telemetry work is done using handheld directional antennae and either direction-finding and homing techniques or radio-triangulation techniques. Over the past couple of decades, efforts have been made to utilize unmanned aerial vehicles to make radio-telemetry tracking more efficient, or cover more area. However, many of these approaches are complex and have not been rigorously field-tested. To provide scientists with reliable quality tracking data, tracking systems need to be rigorously tested and characterized. In this paper, we present a novel, drone-based, radio-telemetry tracking method for tracking the broad-scale movement paths of animals over multiple days and its implementation and deployment under field conditions. During a 2-week field period in the Cayman Islands, we demonstrated this system's ability to localize multiple targets simultaneously, in daily 10 min tracking sessions over a period of 2 weeks, generating more precise estimates than comparable efforts using manual triangulation techniques.}}
 
+@Article{Meachum2021,
+  author    = {Meachum, Bill and Hui, Nathan},
+  journal   = {SEA TECHNOLOGY},
+  title     = {Wayfinder DVL Verifying Performance, Integration of DVL for Small ROVs, AUVs},
+  year      = {2021},
+  number    = {2},
+  pages     = {20--22},
+  volume    = {62},
+  publisher = {COMPASS PUBLICATIONS, INC 1501 WILSON BLVD., STE 1001, ARLINGTON, VA 22209~…},
+}
+
+@Article{Pacheco2015,
+  author = {Pacheco, Jorge and Hui, Nathan},
+  title  = {CAVECamX-Developing an Improved CAVECam},
+  year   = {2015},
+}
+
 @INPROCEEDINGS{webber_hui_kastner_et_al_ieee_icnc_2017,
     title={Radio receiver design for Unmanned Aerial wildlife tracking},
     DOI={10.1109/iccnc.2017.7876260},
