--- a/CV.tex
+++ b/CV.tex
@@ -35,8 +35,8 @@
 
 	{\sl UCSD Dronelab / Center for Interdisciplinary Sciences, Art, Archaeology, and Architecture (CISA3) / Cultural Heritage Engineering Initiative (CHEI)} \hfill January 2015 - current
 	\begin{itemize}
+		\item Flew DJI S1000 to support development of underslung payload control (2024-02)
 		\item Developed and tested a multicamera photogrammetry rig for shallow water demonstration of underwater photogrammetry in 2022-2024.
-		\item 
 		\item Flew multirotor aircraft to support remote monitoring of shake table testing at the NHERI Large High Performance Outdoor Shake Table at UC San Diego from 2016 to 2024.
 		\item Developed integrated 3-D visual mapping tools using stereo cameras to enable researchers to make high-quality 3-D models of areas in near real-time under an Undergraduate Research Fellowship from the Center of Integrated Access Networks (CIAN) in 2015.
 		\item Falko Kuester, fkuester@ucsd.edu
@@ -86,6 +86,16 @@
 		\item Instructed student pilots in practical and theoretical aspects of flying SUAS in preparation for operating drones on scientific deployments.
 		\item Operated the autopilot and ground station for multirotor-based thermal imaging to detect birds in nests for ecological surveys.
 		\item Primary Investigator: Ryan Kastner, (858) 534-3534, kastner@ucsd.edu; Curt Schurgers, (858) 246-1442, cschurgers@ucsd.edu
+	\end{itemize}
+
+	{\sl Teledyne RD Instruments - Firmware Engineer} \hfill November 25 2019 - January 14 2022
+	\begin{itemize}
+		\item Developed Doppler Velocity Log firmware on STM32H7 MCU, providing device driver and communications packages for the WayFinder DVL.
+		\item Transitioned Acoustic Doppler Current Profiler firmware on 68k CPU from assembly to C, providing sustainable transition to new 68k soft core CPU.
+		\item Utilized CI/CD techniques to rapidly test and validate DSP design implemented on an FPGA.
+		\item Conducted automated complex operational stress testing and design verification/validation of acoustic sensors.
+		\item Developed extensible binary communication frameworks for modular inter-processor communications supporting data transfer, time synchronization, and command/control.
+		\item Developed firmware for aggressive low-power microcontrollers to support power control of long-duration self-contained sensor systems.
 	\end{itemize}
 
 	{\sl UCSD SIO Jaffe Lab - Graduate Researcher} \hfill March 28 2018 - August 30 2018
