feat: Adds diving

--- a/CV.tex
+++ b/CV.tex
@@ -267,8 +267,10 @@
 		\item Research Cruise, California Coast, 1 day, August 2018, Technical Crew
 	\end{itemize}
 
-	{\sl UCSD Engineers For Exploration} \hfill Spring 2015 - current
+	{\sl UCSD Engineers For Exploration} \hfill Winter 2014 - current
 	\begin{itemize}
+		\item FishSense, Key Largo, Florida, 4 days, May 2022, Technical Staff
+		\item Mangrove Monitoring, Clarendon, Jamaica, 22 days, March 2022, Expedition Lead
 		\item Blueprint Earth, Mojave Desert, California. 3 days, November 2016, Sr. Engineer
 		\item Radio Collar Tracker, Little Cayman, Cayman Islands. 10 days, May 2016, Operations Lead
 		\item Radio Collar Tracker, Pedernales, Dominican Republic. 10 days, September 2015, Operations Lead
@@ -400,6 +402,23 @@
 		\end{itemize}
 
 \section{ADDITIONAL SKILLS}
+	{\sl SCUBA Diving}\\
+	    \begin{itemize}
+			\item SSI Open Water - 2022-05-15
+			\item SSI Deep Diving - 2022-08-21
+			\item NAUI Diver Stress and Rescue - 2022-09-15
+			\item NAUI Enriched Air Nitrox - 2022-09-15
+			\item AAUS Scientific Diving (30 fsw) - 2022-09-15
+			\item DAN Diving First Aid Pro - 2022-09-17
+			\item GUE Fundamentals - 2023-01-27
+			\item SSI Navigation - 2023-03-18
+			\item SSI Dry Suit Diving - 2023-03-28
+			\item SSI Night Diving - 2023-04-30
+			\item SSI Science of Diving - 2023-05-18
+			\item SSI Dive Guide - 2023-09-22
+			\item SSI Divemaster - 2023-09-22
+		\end{itemize}
+
 	{\sl Outdoor Leadership}\\
 		Wilderness First Responder, Conflict Resolution, Experiential Learning, Group Management
 
