fix: Updates section ordering and verbiage

--- a/sci_dive_resume.tex
+++ b/sci_dive_resume.tex
@@ -5,18 +5,6 @@
 \address{9500 Gilman Dr MC0404, La Jolla, CA 92093}
 \address{nthui@ucsd.edu, 858.534.9306}
 \begin{resume}
-    \section{Education}
-	{\sl Masters of Science,} Electrical Engineering (Intelligent Systems, Robotics, and Controls)\\
-	UC San Diego, San Diego, CA, March 30 2017 to September 7 2019\\
-	GPA: 3.005 / 4.000
-	Major GPA: 3.141
-
-    
-	{\sl Bachelor of Science,} Electrical Engineering \\
-	UC San Diego, San Diego, CA, September 24 2012 to March 25 2017\\
-	GPA: 3.092 / 4.000
-	Major GPA: 3.106
-
     \section{Related Research Experience}
     {\sl UC San Diego - Research Engineer} \hfill January 2014 - current
     \begin{itemize}
@@ -36,9 +24,21 @@
     \begin{itemize}
         \item 30 fsw authorization
         \item 26 dives
-        \item 17 hours of bottom time
+        \item 17 accumulated hours of bottom time
         \item 26 fsw mean depth
     \end{itemize}
+
+    \section{Education}
+	{\sl Masters of Science,} Electrical Engineering (Intelligent Systems, Robotics, and Controls)\\
+	UC San Diego, San Diego, CA, March 30 2017 to September 7 2019\\
+	GPA: 3.005 / 4.000
+	Major GPA: 3.141
+
+    
+	{\sl Bachelor of Science,} Electrical Engineering \\
+	UC San Diego, San Diego, CA, September 24 2012 to March 25 2017\\
+	GPA: 3.092 / 4.000
+	Major GPA: 3.106
 
 \end{resume}
 \end{document}
