feat: Adds ISPRS 2024 paper

--- a/publications.bib
+++ b/publications.bib
@@ -24,6 +24,17 @@
 	year = {2019},
 	url={https://escholarship.org/uc/item/4574s85j}}
 
+@Article{Hui2024,
+  author  = {Hui, N. and Lo, E. and Rissolo, D. and Kuester, F.},
+  journal = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+  title   = {Lighting Model for Underwater Photogrammetric Captures},
+  year    = {2024},
+  pages   = {153--158},
+  volume  = {XLVIII-2-2024},
+  doi     = {10.5194/isprs-archives-XLVIII-2-2024-153-2024},
+  url     = {https://isprs-archives.copernicus.org/articles/XLVIII-2-2024/153/2024/},
+}
+
 @article{hui_lo_moss_et_al_jfr_2021,
 	author = {Hui, Nathan T. and Lo, Eric K. and Moss, Jen B. and Gerber, Glenn P. and Welch, Mark E. and Kastner, Ryan and Schurgers, Curt},
 	title = {A more precise way to localize animals using drones},
