--- a/publications.bib
+++ b/publications.bib
@@ -46,6 +46,17 @@
 	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/rob.22017},
 	abstract = {Abstract Radio telemetry is a commonly used technique in conservation biology and ecology, particularly for studying the movement and range of individuals and populations. Traditionally, most radio telemetry work is done using handheld directional antennae and either direction-finding and homing techniques or radio-triangulation techniques. Over the past couple of decades, efforts have been made to utilize unmanned aerial vehicles to make radio-telemetry tracking more efficient, or cover more area. However, many of these approaches are complex and have not been rigorously field-tested. To provide scientists with reliable quality tracking data, tracking systems need to be rigorously tested and characterized. In this paper, we present a novel, drone-based, radio-telemetry tracking method for tracking the broad-scale movement paths of animals over multiple days and its implementation and deployment under field conditions. During a 2-week field period in the Cayman Islands, we demonstrated this system's ability to localize multiple targets simultaneously, in daily 10 min tracking sessions over a period of 2 weeks, generating more precise estimates than comparable efforts using manual triangulation techniques.}}
 
+@Article{Lo2024,
+  author  = {Lo, E. and Lozano Bravo, H. and Hui, N. and Nocerino, E. and Menna, F. and Rissolo, D. and Kuester, F.},
+  journal = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+  title   = {Evaluation of the Accuracy of Photogrammetric Reconstruction of Bathymetry Using Differential GNSS Synchronized with an Underwater Camera},
+  year    = {2024},
+  pages   = {211--218},
+  volume  = {XLVIII-2-2024},
+  doi     = {10.5194/isprs-archives-XLVIII-2-2024-211-2024},
+  url     = {https://isprs-archives.copernicus.org/articles/XLVIII-2-2024/211/2024/},
+}
+
 @Article{Meachum2021,
   author    = {Meachum, Bill and Hui, Nathan},
   journal   = {SEA TECHNOLOGY},
